@@ -1,5 +1,13 @@
 2004-09-29  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/glib.symbols: Add g_assert_warning.
+
+	* glib/gmessages.h:
+	* glib/gmessages.c (g_assert_warning): Treat g_assert 
+	in the same way as g_return_if_fail and move the string 
+	constants into a helper function, which also takes 
+	care of removing the "IA__" prefix from internal aliases.
+
 	* glib/gmessages.h: Move the declaration of 
 	g_return_if_fail_warning() out of the ifdefs, so that
 	building with G_DISABLE_ASSERT works.
